syntax = "proto3";

package FaceIdenty;

service FaceIdenty {
	rpc HelloFace(HelloFaceReq) returns(HelloFaceRsp);
	rpc InitFace(InitFaceReq) returns(InitFaceRsp);
	rpc Detect(DetectReq)returns(PredictRsp);
	rpc FindSimilarFace(FindSimilarFaceReq) returns (FindSimilarFaceRsp);
	// rpc FindSimilarHistoryFace(FindSimilarFaceReq) returns (FindSimilarFaceRsp);
	rpc FindSimilarHistoryFace(FindSimilarFaceReq) returns (PredictRsp);
	rpc Compare(CompareReq)returns (CompareRsp);
	rpc Predict(PredictReq)returns(PredictRsp);
	rpc Stop(StopReq)returns(StopRsp);
	rpc SetPersonIdRelation(SetPeronIdRelationReq)returns(SetPeronIdRelationRsp);
	rpc GetPersonIdRelation(GetPersonIdRelationReq)returns(GetPersonIdRelationRsp);

}
////////////////////////////////////////////////////////////////////////////////////////
message PersonidPair{
	string localPersonId = 1;
	string msPersonId = 2;
}

message SetPeronIdRelationReq{
	string groupId = 1;
	int64 trainOkTime = 2;
	repeated PersonidPair pairs = 3;
}
message SetPeronIdRelationRsp{
	string rspinfo = 1;
}

message GetPersonIdRelationReq{
	string groupId = 1;
	repeated string localPersonIds = 2;
}


message GetPersonIdRelationRsp{
	string groupId = 1;
	map<string,string> relationmap = 2;
	string rspinfo = 3;
}


////////////////////////////////////////////////////////////////////////////////////////
message StopReq{
	string id = 1;
}
message StopRsp{
	bool ok = 1;
	string info = 2;
}
////////////////////////////////////////////////////////////////////////////////////////
message DetectReq{
	string id = 1;
	uint32 width = 2;
	uint32 height = 3; 
	bytes pic = 4;
}

////////////////////////////////////////////////////////////////////////////////////////
message PredictFaceInfo{
	string faceid = 1;
	uint32 left = 2;
	uint32 top = 3;
	uint32 width = 4;
	uint32 height = 5;
	string personid =6;
	bool  newperson = 7;
	float confidence = 8;
}
message PredictReq{
	string id = 1;
	uint32 width = 2;
	uint32 height = 3; 
	bytes pic = 4;
}

message PredictRsp{
	string id = 1;
	repeated PredictFaceInfo predictFaces = 2;
}

////////////////////////////////////////////////////////////////////////////////////////
message CompareReq{
	repeated  faceInfo faces = 1;
}
message CompareRsp{
	string compareInfo = 1;
}
////////////////////////////////////////////////////////////////////////////////////////
message InitFaceReq{
	string peerId = 1;
	bool  bclear = 2;
}
message InitFaceRsp{
	int32  error = 1;
	string  error_message = 2;
}
////////////////////////////////////////////////////////////////////////////////////////
message faceInfo{
	string Id = 1;
	bytes facePic = 2;
}

message verifyInfo{
	string Id = 1;
	string similarityId = 2;
	float  score = 3;
}

message FindSimilarFaceReq{
	float    threshold = 1;
	string   peerId = 2;
	int64    timestamp = 3;
	repeated  faceInfo faces = 4;
}

message FindSimilarFaceRsp{
	repeated verifyInfo verifys = 1;
}


////////////////////////////////////////////////////////////////////////////////////////
message HelloFaceReq{
	string  ask = 1;
}
message HelloFaceRsp{
	string response = 1;
}

